Story 2321. Added support to 'diff' mode for source=<TAP service URL>. Also updated comments.